# plugin-xte-dcdu

./: .gitignore  COPYRIGHT  PRIVACY  README.md
.github/workflows/: release.yml
3D Print Files/: CDCU_Main_Panel.stl  README.md
firmware/: .gitignore  credentials.ini.example  platformio.ini
firmware/include/: config.h
firmware/src/: main.cpp
plugin/: CMakeLists.txt  xte-dcdu.cfg.example
plugin/XPLM/: README.md
plugin/scripts/: deploy-win.ps1
plugin/src/: button_handler.cpp  button_handler.hpp  change_detect.cpp  change_detect.hpp  config.cpp  config.hpp  gl_loader.cpp  gl_loader.hpp  jpeg_encoder.cpp  jpeg_encoder.hpp  log.hpp  plugin_main.cpp  readback.cpp  readback.hpp  spsc_ring.hpp  tcp_client.cpp  tcp_client.hpp  texture_finder.cpp  texture_finder.hpp
